# talon

./: .bumpversion.cfg  Pipfile  pyproject.toml  setup.py
talon/: __init__.py  constants.py  html_quotations.py  quotations.py  utils.py
talon/signature/: __init__.py  bruteforce.py  extraction.py
talon/signature/data/: classifier
talon/signature/learning/: classifier.py  dataset.py  featurespace.py  helpers.py
tests/: __init__.py  html_quotations_test.py  quotations_test.py  text_quotations_test.py  utils_test.py
tests/signature/: bruteforce_test.py  extraction_test.py
tests/signature/learning/: dataset_test.py  featurespace_test.py  helpers_test.py
